--- a/views/quizes/question.ejs
+++ b/views/quizes/question.ejs
@@ -1,17 +1,5 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-	<meta charset="UTF-8">
-	<title>Quiz</title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
-</head>
-<body>
-	<h2>Quiz: el juego de las preguntas</h2>
-
-	<form method="get" action="/quizes/answer">
-		Pregunta: <%= pregunta %>
-		<input type="text" name="respuesta" value="" placeholder="Responda aquí"/>
-		<input type="submit" value="Enviar"/>
-	</form>
-</body>
-</html>
+<form method="get" action="/quizes/answer">
+	<p>Pregunta: <%= pregunta %></p>
+	<input type="text" name="respuesta" value="" placeholder="Respuesta"/>
+	<input type="submit" value="Enviar"/>
+</form>
