--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -4,6 +4,8 @@
     <input type="submit" value="Buscar"/>
 </form>
 
+<% if(quizes.length == 0) {%><p>No encontrado</p><% } %>
+
 <table>
 <caption>Lista de preguntas:</caption>
 <% var i; for (i=0; i < quizes.length; i++) { %>
@@ -11,4 +13,4 @@
 <% } %>
 </table>
 
-<% if(quizes.length == 0) {%><p>No encontrado</p><% } %>
+<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
