--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,3 +10,6 @@ header, nav, section, footer { background: #eee; text-align: center;}
 nav span             { margin: 0px 10px 0px 0px;}
 
 #ErrorMsgs					 { color: #f61; font-size: smaler;}
+.tema {text-transform: capitalize;}
+table {text-align: left; margin: 20px auto;}
+td:nth-child(2) {padding: 0px 20px;}
