--- a/views/quizes/_form.ejs
+++ b/views/quizes/_form.ejs
@@ -2,5 +2,16 @@
 <input type="text" id="preg" name="quiz[pregunta]" value="<%= quiz.pregunta %>"/><br>
 <label for="resp" class="rem">Respuesta:</label>
 <input type="text" id="resp" name="quiz[respuesta]" value="<%= quiz.respuesta %>"/><br>
+
+<label for="tema" class="rem">Tema:</label>
+<select class="tema" name="quiz[tema]">
+  <option value="<%= quiz.tema %>" selected><%= quiz.tema %></option>
+  <option value="humanidades">Humanidades</option>
+  <option value="ocio">Ocio</option>
+  <option value="ciencia">Ciencia</option>
+  <option value="tecnologia">Tecnología</option>
+  <option value="otro">Otro</option>
+</select><br>
+
 <a href="/quizes"><button type="button">Cancelar</button></a>
 <input type="submit" value="Salvar"/>
