--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -10,6 +10,7 @@
 <caption>Lista de preguntas:</caption>
 <% var i; for (i=0; i < quizes.length; i++) { %>
    <tr>
+    <td class="tema"><%= quizes[i].tema %></td>
     <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
     <td><a href="quizes/<%= quizes[i].id %>/edit"><button type="button">Editar</button></a></td>
     <td>
