--- a/views/author.ejs
+++ b/views/author.ejs
@@ -1,8 +1,8 @@
 <p>
-  <img src="images/<%= foto %>" alt="Foto del autor de la página" style="height:50px">
-  <br><%= autor %>
+  <img src="images/<%= foto %>" alt="Foto del autor de la página" style="height:90px">
+  <br>Autor: <%= autor %>
 </p>
-<video muted controls autoplay loop width="auto" height="100">
+<video muted controls autoplay loop width="auto">
   <source src="videos/<%= video %>" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
   Your browser does not support the video tag.
 <video>
