--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title> Preguntas </title>
+	<meta name="description" content="Quiz el juego de las preguntas">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
+  <script src="/javascripts/jquery-2.1.0.js"></script>
+  <script src="/javascripts/bootstrap.js"></script>
+  <link rel="stylesheet" href="/stylesheets/bootstrap.css">
+  <link rel="stylesheet" href="/stylesheets/bootstrap-theme.css">
 	<link rel='stylesheet' href='/stylesheets/style.css' />
   <link rel='stylesheet'
         type='text/css'
@@ -22,7 +28,7 @@
   <nav class="main" id="n1" role="navigation">
     <span><a href="/">Inicio</a></span>
     <span><a href="/quizes">Preguntas</a></span>
-		<span><a href="/author">Autor</a></span>
+		<span><a href="/author">Creditos</a></span>
   </nav>
 
   <section class="main" id="s1">
@@ -39,10 +45,8 @@
   </section>
 
   <footer class="main" id="f1">
-    <a href="http://es.wikipedia.org/wiki/Quiz">
-      Que es un Quiz?</a>
-		<a href="https://github.com/joseantonio-constantin/quiz">
-			Este proyecto en GitHub</a>
+		<a href="http://es.wikipedia.org/wiki/Quiz">¿Que es un Quiz?</a>
+		Este proyecto en <a href="https://github.com/joseantonio-constantin/quiz-jcf">GitHub</a>
   </footer>
 </div>
 </body>
