--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,5 @@
-<h3>Bienvenido a <%= title %></h3>
-<p>El portal donde podrá crear sus propios juegos!</p>
+<div class="jumbotron">
+  <h2>Bienvenido a <%= title %></h2>
+  <p>El portal donde podrá crear sus propios juegos!</p>
+  <p><a class="btn btn-primary btn-lg" href="/quizes" role="button">Empezar</a></p>
+</div>
