--- a/views/quizes/answer.ejs
+++ b/views/quizes/answer.ejs
@@ -1,4 +1,8 @@
 <p>
   <%= respuesta %>
-  <a href="/quizes/<%= quiz.id %>">Volver</a>
+  <% if(respuesta === 'Correcto') { %>
+    <a href="/quizes/<%= quiz.id %>" class="btn btn-success">Volver</a>
+  <% } else { %>
+    <a href="/quizes/<%= quiz.id %>" class="btn btn-danger">Volver</a>
+  <% } %>
 </p>
