--- a/views/quizes/index.ejs
+++ b/views/quizes/index.ejs
@@ -1,21 +1,34 @@
 <h3>Buscador de preguntas</h3>
-<form method="get" action="/quizes">
-    <input type="text" name="search" placeholder="buscar pregunta" required/>
-    <input type="submit" value="Buscar"/>
+<form class="form-inline" method="get" action="/quizes">
+  <div class="col-lg-6">
+    <div class="input-group">
+      <input type="text" name="search" class="form-control" placeholder="buscar pregunta" required/>
+      <span class="input-group-btn">
+        <input type="submit" class="btn btn-info" value="Buscar"/>
+      </span>
+    </div><!-- /input-group -->
+  </div><!-- /.col-lg-6 -->
 </form>
 
-<% if(quizes.length == 0) {%><p>No encontrado</p><% } %>
+<div id="notFound" class="alert alert-danger alert-dismissible hidden" role="alert">
+  <button type="button" class="close" data-dismiss="alert" aria-label="Close" onclick="location.href='/quizes'">
+    <span aria-hidden="true">&times;</span>
+  </button>
+  <strong>No encontrado!</strong> Compruebe su búsqueda y vuelva a intentarlo.
+</div><!-- /alert -->
 
-<table>
-<caption>Lista de preguntas:</caption>
+<div id="ocultar">
+<table id="lista-preg" class="table table-condensed">
+   <caption>Lista de Quizzes:</caption>
+   <tr><th>Tema</th><th>Pregunta</th><th>&nbsp;</th><th>&nbsp;</th></tr>
 <% var i; for (i=0; i < quizes.length; i++) { %>
    <tr>
-    <td class="tema"><%= quizes[i].tema %></td>
+    <td class="text-capitalize"><%= quizes[i].tema %></td>
     <td><a href="quizes/<%= quizes[i].id %>"><%= quizes[i].pregunta %></a></td>
-    <td><a href="quizes/<%= quizes[i].id %>/edit"><button type="button">Editar</button></a></td>
+    <td><a href="quizes/<%= quizes[i].id %>/edit"><button type="button" class="btn btn-default">Editar</button></a></td>
     <td>
       <form method="post" action="quizes/<%= quizes[i].id %>?_method=delete">
-        <button type="submit" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
+        <button type="submit" class="btn btn-default" onClick="return confirm('Borrar: <%= quizes[i].pregunta %>');">
           Borrar
         </button>
       </form>
@@ -23,5 +36,17 @@
    </tr>
 <% } %>
 </table>
+<a href="/quizes/new"><button type="button" class="btn btn-primary">Crear pregunta</button></a>
+</div>
 
-<a href="/quizes/new"><button type="button">Crear pregunta</button></a>
+<script>
+$(document).ready(function() {
+  var q = <%= quizes.length %>;
+  if( q === 0) {
+    $('#notFound').removeClass('hidden');
+    $('#ocultar').addClass('hidden');
+  } else {
+    console.log('quizzes '+ q);
+  }
+});
+</script>
