--- a/views/quizes/new.ejs
+++ b/views/quizes/new.ejs
@@ -1,5 +1,5 @@
 <p>Añadir pregunta: </p>
 
-<form method="post" action="/quizes/create">
+<form class="form-horizontal" method="post" action="/quizes/create">
   <% include _form.ejs %>
 </form>
