--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,6 +1,6 @@
-<form method="get" action="/quizes/<%= quiz.id %>/answer">
-	<h4 class="tema">Tema: <%= quiz.tema %></h4>
-	<p>Pregunta: <%= quiz.pregunta %></p>
-	<input type="text" name="respuesta" placeholder="Respuesta" required/>
-	<input type="submit" value="Enviar"/>
+<form class="form-inline" method="get" action="/quizes/<%= quiz.id %>/answer">
+	<h4 class="text-capitalize"><strong>Tema: </strong><%= quiz.tema %></h4>
+	<p><strong>Pregunta: </strong><%= quiz.pregunta %></p>
+	<input type="text" class="form-control" name="respuesta" placeholder="Respuesta" required/>
+	<input type="submit" class="btn btn-primary" value="Enviar"/>
 </form>
