--- a/views/quizes/show.ejs
+++ b/views/quizes/show.ejs
@@ -1,6 +1,18 @@
 <form class="form-inline" method="get" action="/quizes/<%= quiz.id %>/answer">
 	<h4 class="text-capitalize"><strong>Tema: </strong><%= quiz.tema %></h4>
 	<p><strong>Pregunta: </strong><%= quiz.pregunta %></p>
-	<input type="text" class="form-control" name="respuesta" placeholder="Respuesta" required/>
-	<input type="submit" class="btn btn-primary" value="Enviar"/>
+	<div class="input-group">
+		<input type="text" class="form-control" name="respuesta" placeholder="Respuesta" required/>
+		<span class="input-group-btn">
+			<input type="submit" class="btn btn-info" value="Enviar"/>
+		</span>
+    </div><!-- /input-group -->
 </form>
+
+<br><p><a href="/quizes"><button type="button" class="btn btn-default">Lista preguntas</button></a>
+<a href="/quizes/<%= quiz.id %>/comments/new"><button type="button" class="btn btn-default">Nuevo comentario</button></a></p>
+
+<p><strong>Comentarios:</strong></p>
+<% for(index in quiz.Comments) { %>
+	<p>- <%= quiz.Comments[index].texto %></p>
+<% } %>
