--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -10,6 +10,8 @@ header, nav, section, footer { background: #eee; text-align: center;}
 nav span             { margin: 0px 10px 0px 0px;}
 
 #ErrorMsgs					 { color: #f61; font-size: smaler;}
+.right							 { float: right;}
+
 /* Autor */
 #lista-preg {margin: 20px auto; text-align: left; width:auto !important;}
 #lista-preg td {vertical-align: middle;}
