--- a/public/stylesheets/smartphone.css
+++ b/public/stylesheets/smartphone.css
@@ -6,4 +6,4 @@ h2 span, section h3, label.rem
                  { display: none; }
 body             { font-size: xx-large; }
 input, button    { font-size: x-large; }
-footer           { font-size: large; }
+footer, td       { font-size: large; }
